...
        return created.toDate(formatString: "HH:mm, MMMM YYYY")
    }
}

/// An enum representing the possible gender values of a character in the Rick and Morty
enum Gender: String, Codable, CaseIterable {
    case male = "Male"
    case female = "Female"
    case genderless = "Genderless"
    case unknown = "unknown"
    
    /// Returns an array of all the raw values of the enum cases, capitalized.
    static func allCasesRawValue() -> [String] {
...
        }
    }
}

/// An enum representing the possible status values of a character.
enum Status: String, Codable, CaseIterable {
    case alive = "Alive"
    case dead = "Dead"
    case unknown = "unknown"
    
    /// Returns an array of all the raw values of the enum cases, capitalized.
    static func allCasesRawValue() -> [String] {
        self.allCases.map { item in
...
